@@ -1,5 +1,12 @@
 2001-12-11  Havoc Pennington  <hp@redhat.com>
 
+	* gconf/gconfd.c (drop_old_clients): fix this
+
+	* gconf/gconf-database.c (client_alive_predicate): fix spelling in
+	log message
+
+2001-12-11  Havoc Pennington  <hp@redhat.com>
+
 	* gconf/gconfd.c (drop_old_clients): use
 	CORBA_Object_non_existent() instead of ConfigListener_ping
 
